# micropython

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  buildspec.yml
.github/workflows/: ports_rx.yml  ports_rz.yml
docs/: conf.py  index.rst
docs/rxboard/: general.rst  gr_rose.rst  gr_sakura.rst  quickref.rst  rxboard_index.rst
docs/templates/: topindex.html
drivers/esp/: esp.cmake  esp_driver.c  esp_driver.h  mpy_debug.c  mpy_debug.h  mpy_uart.c  mpy_uart.h  tinymalloc.c  tinymalloc.h  vector.c  vector.h
drivers/memory/: spiflash.c
extmod/: cacert.h  extmod.mk  modlwip.c  modnetwork.h  modsocket.c  moduselect.c  modusocket.c  modussl_mbedtls.c  network_esp.c
extmod/lwip-include/: lwipopts.h
lib/lcdspi/: lcdspi.cmake
lib/mbed-http/: CMakeLists.txt
lib/mbed-http/.hg/: dirstate  hgrc  undo.desc
lib/mbed-http/.hg/store/: 00manifest.i
lib/mbed-http/.hg/store/data/img/: root-ca-selection.png.d
lib/mbed-http/.hg/store/data/source/: https__request.h.i
lib/mbed-os/: mbed_config.h
lib/utils/: gchelper.h  pyexec.c
ports/renesas-ra/: build_all_boards.sh  factoryreset.c  flashbdev.c
ports/rp2/: build_pico.sh  build_picow.sh
ports/rx/: Makefile  README.md  accel.c  accel.h  adc.c  adc.h  all_build.sh  all_dd_build.sh  boardctrl.c  boardctrl.h  bufhelper.h  build_all.sh  build_dd_all.sh  dac.c  dac.h  (+120 more)
py/: gc.c  lvgl.mk  malloc.c  misc.h  mkenv.mk  mkrules.mk  modmicropython.c  mpconfig.h  nativeglue.c  nlr.h  nlrrx.c  obj.c  obj.h  objbool.c  py.mk  runtime.c  stream.h
tools/: ci.sh  gen-cpydiff.py  makemanifest.py  uncrustify.cfg
(+839 files in other folders)
